syntax = "proto3";
package user;

import "v1/user/model.proto";



// AUTH RESPONSE DEFINITION
message AuthLogoutByTokenResponse {
  bool is_valid = 1;
}

message AuthVerifyOtpResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message VerifiedAccessControlUserByTokenResponse {
  bool isValid = 1;
  user.User user = 2;
  user.Role role = 3;
  repeated user.AccessControl access_controls = 4;
}


// USER RESPONSE DEFINITION
message CreateUserResponse {
  string id = 1;
}

message UpdateUserByIdResponse {

  string id = 1;
}