syntax = "proto3";
package proto;

message Cart {
  string id = 1;
  string userId = 2;
  repeated CartItems items = 3;
}

message CartItems {
  string productId = 1;
  string qty = 2;
}